Introduce Remote translog feature flag (#4158)
* Introduce Remote translog feature flag
* Limit combinations of remote segment and translog store to valid ones

Signed-off-by: Bukhtawar Khan <bukhtawa@amazon.com>
(cherry picked from commit a469a3cbcb7a7294a81bf7e4122968c2a9b32ca4)